--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ default = []
 anchor-lang = "0.29.0"
 pyth-sdk = "0.8.0"
 pyth-sdk-solana = "0.9.0"
+anchor-spl = { version = "0.29.0", features = ["token"] }
